--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:password@localhost:5432/task?schema=public"
+DATABASE_URL="postgresql://sonar_owner:Q5mDoN6sBbzj@ep-lingering-pond-a2w517wf-pooler.eu-central-1.aws.neon.tech/todo?sslmode=require"
