--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.316.0",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "next-safe-action": "^6.0.2",
     "query-string": "^8.1.0",
     "radix-ui": "^1.0.1",
